--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@aws-sdk/client-dynamodb": "^3.490.0",
     "aws": "^0.0.3-2",
     "aws-sdk": "^2.1534.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cashfree-pg": "^4.3.10",
     "cashfree-sdk": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
